Extract toolchain support into its own plugin
See gh-24402